--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^4.0.3",
     "react-use": "^17.3.1",
     "typescript": "^4.5.2",
     "web-vitals": "^2.1.2"
+  },
+  "devDependencies": {
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
