--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "lint": "eslint --fix . && prettier --write .",
-    "lint:check": "eslint --max-warnings 0 . && prettier --check ."
+    "lint": "eslint --ignore-path .gitignore --fix . && prettier --ignore-path .gitignore --write .",
+    "lint:check": "eslint --ignore-path .gitignore --max-warnings 0 . && prettier --ignore-path .gitignore --check ."
   },
   "eslintConfig": {
     "extends": [
